[gd_scene load_steps=4 format=3 uid="uid://cvmp6av2nxomd"]

[ext_resource type="Script" path="res://Scripts/grapple_point.gd" id="1_igos5"]
[ext_resource type="Texture2D" uid="uid://v7hnvxuq177q" path="res://Sprites/icon.svg" id="2_oflna"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qrs3x"]
radius = 1.99999

[node name="GrapplePoint" type="Area2D" groups=["grapplePoints"]]
rotation = 0.767945
collision_layer = 32
collision_mask = 32
script = ExtResource("1_igos5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qrs3x")
debug_color = Color(1, 1, 1, 0.372549)

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_oflna")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
